# AuxRumble

./: AuxRumble.jucer  CMakeLists.txt  LICENSE  README.md
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: AuxIIR.cpp  AuxIIR.h  AuxParam.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: AuxOption.h  AuxSlider.cpp  AuxSlider.h
src/: AuxIIR.cpp  AuxIIR.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Components/: AuxOption.cpp  AuxOption.h  AuxSlider.cpp  AuxSlider.h
